<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_StackDestination" Id="{9977ecbf-7c3e-448d-8e2a-e2b009032fa0}">
    <Declaration><![CDATA[TYPE ST_StackDestination :
STRUCT
	nStack: INT;
	nLevel: INT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>